--- a/src/Portfolio/styles/index.css
+++ b/src/Portfolio/styles/index.css
@@ -1,63 +1,4 @@
-/** importing fonts  **/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@100;200;300..700&display=swap');
- 
- 
-* {
- padding: 0;
- margin: 0;
-}
-
-html {
- scroll-behavior: smooth;
-}
-
-body {
- width: 100vw;
- height: auto;
- display: flex;
- flex-direction: column;
- align-items: center;
- justify-content: center;
- font-family: 'Poppins';
- font-weight: 400;
- background-color: var(--bg-color);
- background-image: var(--bg-color);
- transition: 400ms;
-}
-
-a,
-a:hover,
-a:visited {
- text-decoration: none;
-}
-
-p {
- font-size: .9rem;
-}
-
-svg {
- stroke: var(--text-color);
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
- font-family: 'Fredoka';
-}
-
-header,nav {
- width: 100vw;
- display: flex;
- align-items: center;
- justify-content: center;
-}
-
-nav > ul {
+.portfolio-nav {
  width: 84vw;
  height: 4rem;
  position: fixed;
@@ -66,7 +7,7 @@ nav > ul {
  align-items: center;
  justify-content: space-between;
  color: var(--text-color);
- padding: 0 .5rem;
+ padding: 0 .6rem;
  background-color: rgba(50, 50, 50, 0.1);
  backdrop-filter: blur(6px);
  -webkit-backdrop-filter: blur(6px);
@@ -76,7 +17,7 @@ nav > ul {
  z-index: 10;
 }
 
-nav > ul > li {
+.portfolio-nav > li {
  height: 100%;
  display: flex;
  align-items: center;
@@ -84,13 +25,7 @@ nav > ul > li {
  border-radius: var(--box-radius);
 }
 
-nav > ul > li:first-of-type {
- height: auto;
- justify-content: space-evenly;
- padding-right: .6rem;
-}
-
-nav > ul > li:first-of-type > h1 {
+.portfolio-nav > li:first-of-type > h1 {
  font-weight: 650;
 }
 
@@ -138,14 +73,6 @@ nav > ul > li:first-of-type > h1 {
  border: none;
  border-radius: .6rem;
  margin: 1.5rem 0 1rem 0;
-}
-
-main,
-footer {
- width: 100vw;
- display: flex;
- flex-direction: column;
- align-items: center;
 }
 
 section {
@@ -261,7 +188,7 @@ section {
  flex-direction: column;
  align-items: center;
  justify-content: center;
- text-align: center;
+ text-align: left;
  padding: 1rem 5%;
  background-color: var(--shade);
  background-image: var(--shade);
@@ -317,7 +244,7 @@ section {
 }
  
 .about-section-info p {
- margin-bottom: 1rem;
+ margin-block: .5rem;
 }
 
 
@@ -370,8 +297,7 @@ section {
   align-items: center;
   padding: 1.2rem;
   gap: 1rem;
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
+  background-color: var(--shade);
   border: .080rem solid var(--shade);
   border-radius: var(--box-radius);
 }
@@ -457,11 +383,18 @@ section {
  gap: 2rem;
 }
 
-.tools-container > div div {
+.tool-div {
  width: 9rem;
- height: 4rem;
  display: flex;
- flex-direction: row;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+ gap: .4rem;
+}
+.tool-div div {
+ width: 9rem;
+ height: 4.5rem;
+ display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
@@ -469,8 +402,11 @@ section {
  border-radius: var(--box-radius);
  transition: 200ms;
 }
-
-.tools-container > div div h3 {
+.tool-div img {
+ height: 2.5rem;
+ border-radius: .5rem;
+}
+.tool-div h3 {
  text-align: center;
 }
 
@@ -500,29 +436,6 @@ section {
 .contact-div:hover {
  transform: scale(0.9);
 }
-
-
-footer > div {
- width: 100%;
- height: 5rem;
- display: flex;
- flex-direction: column;
- align-items: center;
- justify-content: center;
- gap: .4rem;
- color: var(--text-color);
- margin: 3rem 0 1rem 0;
-}
-
-footer strong {
-  margin-block: -.5rem .8rem;
-}
-
-footer p {
-  font-size: .8rem;
-  filter: opacity(70%);
-}
-
 
 
 @media (min-width: 726px) {
