--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,37 +1,34 @@
 :root {
- --text-color: rgb(210, 210, 220);
- --bg-color:  rgb(10, 10, 10);
- --shade: rgb(14, 14, 14);
- --sclr: rgb(30, 40, 120);
- --box-radius: .8rem;
+  --text-color: rgb(210, 210, 220);
+  --bg-color: rgb(14, 14, 14);
+  --shade: rgb(26, 26, 30);
+  --sclr: rgb(30, 40, 120);
+  --box-radius: 0.8rem;
 }
-
 
 .light {
   --text-color: rgb(30, 30, 30);
   --bg-color: rgb(240, 245, 255);
   --shade: rgb(215, 225, 250);
   --sclr: rgb(135, 140, 255);
-  --box-radius: .8rem;
+  --box-radius: 0.8rem;
 }
 
-
-
 @keyframes waving {
- 50% {
-   transform: rotateX(180deg) rotate(90deg);
- }
+  50% {
+    transform: rotateX(180deg) rotate(90deg);
+  }
 }
 
 @keyframes dim {
- 50% {
-  background-color: var(--bg);
- }
+  50% {
+    background-color: var(--bg);
+  }
 }
 
 @keyframes quick-zoom {
- 50% {
-  background-color: var(--sclr);
-  transform: scale(1.1);
- }
+  50% {
+    background-color: var(--sclr);
+    transform: scale(1.1);
+  }
 }
